# chatgeneral

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
proxy/: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
proxy/src/: index.ts
python/chatgeneral/: .gitignore  README.md  pyproject.toml
python/chatgeneral/chatgeneral/: __init__.py  cli.py  server.py
src/: App.css  App.tsx  index.css  serverConfig.ts
src/chat/: availableModels.ts  createCompletionFunction.ts  parseCompletionStream.ts  passcodeStorage.ts  types.ts
src/chat/tools/: fetchUrl.ts  index.ts  runPythonScript.ts  runScript.ts  showIframe.ts
src/components/About/: AboutDialog.tsx
src/components/Chat/: ChatPanel.tsx  ChatSettingsDialog.tsx
src/components/Instructions/: EditLocalInstructionsDialog.tsx
src/components/Layout/: MainLayout.tsx
src/components/Outputs/: OutputItem.tsx  OutputPanel.tsx
src/components/Welcome/: WelcomePage.tsx
src/outputs/: types.ts  useOutputs.ts
src/react-ai-chat/components/: ChatPanel.tsx  CompressConfirmDialog.tsx  MessageItem.tsx  index.ts
src/react-ai-chat/hooks/: useChat.ts
src/react-ai-chat/types/: index.ts
src/react-ai-chat/utils/: index.ts
