[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgeneral"
version = "0.1.0"
description = "Server for executing Python scripts via HTTP API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
chatgeneral = "chatgeneral.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatgeneral*"]
